[package]
name = "openxchgrs"
description = "Open Exchange Rates mirror and some"
version = "0.1.0"
edition = "2021"
authors = ["David Ebreo <arhyth@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
chrono = "0.4.31"
clap = { version = "4.4", features = ["derive"] }
http = "1.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [  "runtime-tokio", "postgres" ] }
tokio = { version = "1", features = ["full"] }

[lib]
name = "rates"
crate-type= ["lib"]
edition = "2021"
path = "src/lib.rs"

[[bin]]
name = "fetcher"
path = "src/bin/fetcher.rs"
test = false